@@ -12,6 +12,7 @@
           - SparseBooleanMatrix: remove Rows() method (not necessary)
           - Matrix<T>: perform bounds check only when DEBUG is set;
             faster GetRow()/SetRow(); generic return types
+          - MatrixUtils: remove ContainsNaN() method
 	- documentation
           - some API doc improvements
 
